--- a/package.json
+++ b/package.json
@@ -7,23 +7,44 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:dev": "NODE_ENV=development ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:prod": "NODE_ENV=production node ./node_modules/typeorm/cli.js",
+    "migration:run:dev": "npm run typeorm:dev -- migration:run -d src/db/data_source.ts",
+    "migration:run:prod": "npm run typeorm:prod -- migration:run -d dist/db/data_source.ts",
+    "migration:generate": "npm run typeorm migration:generate -d src/db/data_source.ts",
+    "migration:create": "npm run typeorm migration:create -d src/db/data_source.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "kafka-node": "^5.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
-    "routers": "^0.1.4",
+    "routers": "^0.1.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
