--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "3000:3000"
     environment:
       - NODE_ENV=development
       - DB_HOST=db
@@ -14,8 +14,27 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=admin
       - DB_NAME=knowledgekeeper
-      - KAFKA_HOST=kafka:9092
+    depends_on:
+      - db
+    networks:
+      - app-network
 
+  db:
+    image: postgres:14-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: knowledgekeeper
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
 volumes:
   db_data:
+
+networks:
+  app-network:
+    driver: bridge
