--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    command: >
+      /bin/sh -c "
+      npm run migration:run:dev &&
+      npm start
+      "
