--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
+    "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -38,6 +39,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
