--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@nestjs/common": "^10.4.4",
     "@types/amqplib": "^0.10.5",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
