--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "esModuleInterop": true,
     "strictPropertyInitialization": false,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]
   },
   "include": [
     "src/**/*.ts",
