--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "node-cron": "^3.0.3",
+    "node-html-parser": "^6.1.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
