--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/common": "^10.4.4",
     "@types/amqplib": "^0.10.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/diff": "^6.0.0",
@@ -53,6 +54,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "bcryptjs": "^2.4.3",
     "node-cron": "^3.0.3",
     "node-html-parser": "^6.1.13",
     "ts-node": "^10.9.2",
