--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Step 4: Run migration
       - name: Run Tests
-        run: npm run:migration:run:dev
+        run: npm run migration:run:dev
 
       # Step 6: Deploy to the appropriate environment
       - name: Deploy to Server
