--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,17 +18,16 @@ jobs:
     - name: Prepare SSH
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-        SERVER_HOST: ${{ secrets.SERVER_HOST }}
       run: |
         mkdir -p ~/.ssh
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/github_hariship
         chmod 600 ~/.ssh/github_hariship
-        ssh-keyscan -H $SERVER_HOST >> ~/.ssh/known_hosts
+        ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
         
     - name: Deploy to Staging Server (develop)
       if: github.ref_name == 'develop'
       env:
-        SERVER_HOST: ${{ secrets.SERVER_HOST }}  
+        SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
       run: |
         ssh -i ~/.ssh/github_hariship ubuntu@$SERVER_HOST \
           "cd ~/KnowledgeKeeperCore_Develop && \
@@ -39,7 +38,7 @@ jobs:
     - name: Deploy to Production Server (main)
       if: github.ref_name == 'main'
       env:
-        SERVER_HOST: ${{ secrets.SERVER_HOST }}
+        SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
       run: |
         ssh -i ~/.ssh/github_hariship ubuntu@$SERVER_HOST \
           "cd ~/KnowledgeKeeperCore && \
