--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,8 +20,8 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
       run: |
         mkdir -p ~/.ssh
-        echo "$SSH_PRIVATE_KEY" > ~/.ssh/knowledge-keeper-develop.pem
-        chmod 600 ~/.ssh/knowledge-keeper-develop.pem
+        echo "$SSH_PRIVATE_KEY" > ~/Downloads/knowledge-keeper-develop.pem
+        chmod 600 ~/Downloads/knowledge-keeper-develop.pem
         ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
         
     - name: Deploy to Staging Server (develop)
