--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
       run: |
-        mkdir -p ~/.ssh
+        mkdir -p ~/Downloads
         echo "$SSH_PRIVATE_KEY" > ~/Downloads/knowledge-keeper-develop.pem
         chmod 600 ~/Downloads/knowledge-keeper-develop.pem
         ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
