--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -20,10 +20,16 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
       run: |
         mkdir -p ~/Downloads
-        echo "$SSH_PRIVATE_KEY" > ~/Downloads/knowledge-keeper-develop.pem
+        echo "${SSH_PRIVATE_KEY}" > ~/Downloads/knowledge-keeper-develop.pem
         chmod 600 ~/Downloads/knowledge-keeper-develop.pem
         ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
-        
+
+    - name: Debug SSH Connection
+      env:
+        SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
+      run: |
+        ssh -vvv -i ~/Downloads/knowledge-keeper-develop.pem ubuntu@$SERVER_HOST echo "SSH connection successful"
+      
     - name: Deploy to Staging Server (develop)
       if: github.ref_name == 'develop'
       env:
