--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,10 +19,13 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
       run: |
-        mkdir -p ~/Downloads
+        mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
         echo "${SSH_PRIVATE_KEY}" > ~/Downloads/knowledge-keeper-develop.pem
         chmod 600 ~/Downloads/knowledge-keeper-develop.pem
+
         ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
+        chmod 644 ~/.ssh/known_hosts
 
     - name: Debug SSH Connection
       env:
