--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,8 +21,8 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         chmod 700 ~/.ssh
-        echo "${SSH_PRIVATE_KEY}" > ~/.ssh/knowledge-keeper-develop.pem
-        chmod 600 ~/.ssh/knowledge-keeper-develop.pem
+        echo "${SSH_PRIVATE_KEY}" > ~/.ssh/github_hariship
+        chmod 600 ~/.ssh/github_hariship
 
         ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
         chmod 644 ~/.ssh/known_hosts
@@ -31,14 +31,14 @@ jobs:
       env:
         SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
       run: |
-        ssh -vvv -i ~/Downloads/knowledge-keeper-develop.pem ubuntu@$SERVER_HOST echo "SSH connection successful"
+        ssh -vvv -i ~/.ssh/github_hariship.pub ubuntu@$SERVER_HOST echo "SSH connection successful"
       
     - name: Deploy to Staging Server (develop)
       if: github.ref_name == 'develop'
       env:
         SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
       run: |
-        ssh -i ~/Downloads/knowledge-keeper-develop.pem ubuntu@$SERVER_HOST \
+        ssh -i ~/.ssh/github_hariship.pub ubuntu@$SERVER_HOST \
           "cd ~/KnowledgeKeeperCore_Develop && \
           git pull origin develop && \
           docker-compose down && \
@@ -49,7 +49,7 @@ jobs:
       env:
         SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
       run: |
-        ssh -i ~/Downloads/knowledge-keeper-develop.pem ubuntu@$SERVER_HOST \
+        ssh -i ~/.ssh/github_hariship.pub ubuntu@$SERVER_HOST \
           "cd ~/KnowledgeKeeperCore && \
           git pull origin main && \
           docker-compose down && \
