--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,45 +12,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-      
-    - name: Prepare SSH
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-      run: |
-        mkdir -p ~/.ssh
-        chmod 700 ~/.ssh
-        echo "${SSH_PRIVATE_KEY}" > ~/.ssh/github_harship
-        chmod 600 ~/.ssh/github_harship
+      # Step 1: Checkout the repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-        ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
-        chmod 644 ~/.ssh/known_hosts
+      # Step 2: Prepare SSH Configuration
+      - name: Prepare SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }} # Ensure the private key is set in GitHub Secrets
+        run: |
+          # Create .ssh directory and set permissions
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
 
-    - name: Debug SSH Connection
-      env:
-        SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
-      run: |
-        ssh -vvv -i ~/.ssh/github_harship.pub ubuntu@$SERVER_HOST echo "SSH connection successful"
-      
-    - name: Deploy to Staging Server (develop)
-      if: github.ref_name == 'develop'
-      env:
-        SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
-      run: |
-        ssh -i ~/.ssh/github_harship.pub ubuntu@$SERVER_HOST \
-          "cd ~/KnowledgeKeeperCore_Develop && \
-          git pull origin develop && \
-          docker-compose down && \
-          docker-compose up --build -d"
-          
-    - name: Deploy to Production Server (main)
-      if: github.ref_name == 'main'
-      env:
-        SERVER_HOST: ec2-18-189-31-171.us-east-2.compute.amazonaws.com
-      run: |
-        ssh -i ~/.ssh/github_harship.pub ubuntu@$SERVER_HOST \
-          "cd ~/KnowledgeKeeperCore && \
-          git pull origin main && \
-          docker-compose down && \
-          docker-compose up --build -d"
+          # Save the private key as id_rsa
+          echo "${SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+          # Add server to known_hosts
+          ssh-keyscan -H ec2-18-189-31-171.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
+
+      # Step 3: Test SSH Connection
+      - name: Test SSH Connection
+        run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@ec2-18-189-31-171.us-east-2.compute.amazonaws.com echo "SSH connection successful"
+
+      # Step 4: Deploy to Staging Server (develop branch)
+      - name: Deploy to Staging Server
+        if: github.ref_name == 'develop'
+        run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@ec2-18-189-31-171.us-east-2.compute.amazonaws.com \
+            "cd ~/KnowledgeKeeperCore_Develop && \
+            git pull origin develop && \
+            docker-compose down && \
+            docker-compose up --build -d"
+
+      # Step 5: Deploy to Production Server (main branch)
+      - name: Deploy to Production Server
+        if: github.ref_name == 'main'
+        run: |
+          ssh -i ~/.ssh/id_rsa ubuntu@ec2-18-189-31-171.us-east-2.compute.amazonaws.com \
+            "cd ~/KnowledgeKeeperCore && \
+            git pull origin main && \
+            docker-compose down && \
+            docker-compose up --build -d"
